--- a/app/index.html
+++ b/app/index.html
@@ -11,13 +11,12 @@
     <script src="framework/angular-animate.js"></script>
     <script src="framework/angular-touch.js"></script>
     <script src="framework/angular-cookies.js"></script>
-    <script src="framework/animate.js"></script>
     <script src="framework/underscore.js"></script>
     <script src="js/app.js"></script>
     <script src="js/directive.js"></script>
     <script src="js/controller.js"></script>
 </head>
 <body class="backgroudColor">
-<div ui-view></div>
+<div ui-view class="index"></div>
 </body>
 </html>
