--- a/app/tpls/appAdd.html
+++ b/app/tpls/appAdd.html
@@ -1,4 +1,5 @@
 <div class="header view">
+    <b class="back" ui-sref="index.main"></b>
     <h2>发布新内容</h2>
 </div>
 <div class="container">
@@ -7,7 +8,7 @@
             <input type="text" placeholder="输入标题" ng-model="newTitle" >
         </div>
         <div class="addItem-input big">
-            <textarea placeholder="输入标题" ng-model="newContent"  ></textarea>
+            <textarea placeholder="输入正文" ng-model="newContent"  ></textarea>
         </div>
         <button ng-click="add()">添加</button>
     </div>
